--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -9,6 +9,12 @@
 <ion-content padding>
   Commit pour thomas
   <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
+    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide
   </p>
+  <div *ngFor="let item of listVaisseau">
+    <h2><span>{{item.name}}{{item.id}}</span></h2>
+					<div *ngFor="let pilot of item.films">
+            <span>{{pilot}}</span>
+          </div>
+  </div>
 </ion-content>
