--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -10,11 +10,14 @@
   Commit pour thomas
   <p>
     If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide
+    toto
   </p>
-  <div *ngFor="let item of listVaisseau">
-    <h2><span>{{item.name}}{{item.id}}</span></h2>
-					<div *ngFor="let pilot of item.films">
-            <span>{{pilot}}</span>
+
+
+  <div *ngFor="let item of listVehicules">
+    <h2><span>{{item.url}}{{item.id}}</span></h2>
+					<div *ngFor="let person of item.films">
+            <span>{{person}}</span>
           </div>
   </div>
 </ion-content>
