Fin de la refactorisation

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -13,8 +13,7 @@
     toto
   </p>
 
-
-  <div *ngFor="let item of listVehicules">
+  <div *ngFor="let item of listSpecie">
     <h2><span>{{item.url}}{{item.id}}</span></h2>
 					<div *ngFor="let person of item.films">
             <span>{{person}}</span>
