--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,4 +1,4 @@
 <ion-tabs>
     <ion-tab [root]="tabStarWarsRoot" tabTitle="StarWars" tabIcon="home"></ion-tab>
-    <ion-tab [root]="tabStarWarsRoot" tabTitle="La communauté" tabIcon="home"></ion-tab>
+    <ion-tab [root]="tabCommunityRoot" tabTitle="Our community" tabIcon="home"></ion-tab>
 </ion-tabs>
