Ajout de la classe defaultPage

--- a/src/pages/starwars-tab/starWarsIndex-page/starWarsIndex.html
+++ b/src/pages/starwars-tab/starWarsIndex-page/starWarsIndex.html
@@ -1,15 +1,11 @@
 <ion-header>
     <ion-navbar>
         <ion-title>
-            Ionic Blank
+            {{title}}
         </ion-title>
     </ion-navbar>
 </ion-header>
 
 <ion-content padding>
     <button ion-button (click)="pushVehicles()">Vehicles</button>
-
-
-
-
 </ion-content>
