--- a/src/pages/community-tab/chat-page/chat.html
+++ b/src/pages/community-tab/chat-page/chat.html
@@ -1,16 +1,11 @@
 <ion-header>
     <ion-navbar>
         <ion-title>
-            Community
+            Join Chat
         </ion-title>
     </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-
-    <button ion-button (click)="pushChat()">Chat</button>
-
-
-
 
 </ion-content>
