starWarsObject-page rendu generique avec passage de parametre lors du chargement du composant

--- a/src/pages/starwars-tab/starWarsObject-page/starWarsObject.html
+++ b/src/pages/starwars-tab/starWarsObject-page/starWarsObject.html
@@ -15,8 +15,8 @@
 
     <div *ngFor="let item of listVehicules">
         <h2><span>{{item.url}}{{item.id}}</span></h2>
-        <div *ngFor="let person of item.films">
-            <span>{{person}}</span>
-        </div>
+      <!--  <div *ngFor="let film of item.films">
+            <span>{{film}}</span>
+        </div>-->
     </div>
 </ion-content>
