acces aux listes de maniere generique + spaceships non fonctionnel

--- a/src/pages/starwars-tab/starWarsObject-page/starWarsObject.html
+++ b/src/pages/starwars-tab/starWarsObject-page/starWarsObject.html
@@ -13,7 +13,7 @@
     </p>
 
 
-    <div *ngFor="let item of listVehicules">
+    <div *ngFor="let item of starWarsObjectsList">
         <h2><span>{{item.url}}{{item.id}}</span></h2>
       <!--  <div *ngFor="let film of item.films">
             <span>{{film}}</span>
