--- a/src/pages/starwars-tab/starWarsIndex-page/starWarsIndex.html
+++ b/src/pages/starwars-tab/starWarsIndex-page/starWarsIndex.html
@@ -7,5 +7,14 @@
 </ion-header>
 
 <ion-content padding>
+    <button ion-button (click)="pushPlanets()">Planets</button>
+    <button ion-button (click)="pushSpecies()">Species</button>
+    <button ion-button (click)="pushPeoples()">Peoples</button>
+    <button ion-button (click)="pushSpaceShips()">SpaceShips</button>
+    <button ion-button (click)="pushFilms()">Films</button>
     <button ion-button (click)="pushVehicles()">Vehicles</button>
+
+
+
+
 </ion-content>
