correction bouton starships effectuée

--- a/src/pages/starwars-tab/starWarsIndex-page/starWarsIndex.html
+++ b/src/pages/starwars-tab/starWarsIndex-page/starWarsIndex.html
@@ -10,7 +10,7 @@
     <button ion-button (click)="pushPlanets()">Planets</button>
     <button ion-button (click)="pushSpecies()">Species</button>
     <button ion-button (click)="pushPeoples()">Peoples</button>
-    <button ion-button (click)="pushSpaceShips()">SpaceShips</button>
+    <button ion-button (click)="pushStarShips()">SpaceShips</button>
     <button ion-button (click)="pushFilms()">Films</button>
     <button ion-button (click)="pushVehicles()">Vehicles</button>
 
