--- a/src/pages/starwars-tab/starWarsObject-page/starWarsObject.html
+++ b/src/pages/starwars-tab/starWarsObject-page/starWarsObject.html
@@ -6,8 +6,15 @@
     </ion-navbar>
 </ion-header>
 
+
 <ion-content padding>
 
+  <ion-searchbar
+    [(ngModel)]="searchInput"
+    [showCancelButton]="shouldShowCancel"
+    (ionInput)="onSearchInput($event)"
+    (ionCancel)="onSearchCancel($event)">
+  </ion-searchbar>
     <div *ngFor="let item of starWarsObjectsList">
         <ion-card>
           <img src="http://www.slate.fr/sites/default/files/styles/1090x500/public/starwars.png"/>
