Show list of pilots

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -13,7 +13,7 @@
   </p>
   <div *ngFor="let item of listVaisseau">
     <h2><span>{{item.name}}{{item.id}}</span></h2>
-					<div *ngFor="let pilot of item.films">
+					<div *ngFor="let pilot of item.pilots">
             <span>{{pilot}}</span>
           </div>
   </div>
