Add events-page & aboutUs-page

--- a/src/pages/community-tab/communityIndex-page/communityIndex.html
+++ b/src/pages/community-tab/communityIndex-page/communityIndex.html
@@ -8,7 +8,9 @@
 
 <ion-content padding>
 
+    <button ion-button (click)="pushEvents()">Events</button>
     <button ion-button (click)="pushChat()">Chat</button>
+    <button ion-button (click)="pushAboutUs()">About Us</button>
 
 
 
