--- a/src/pages/community-tab/aboutUs-page/aboutUs.html
+++ b/src/pages/community-tab/aboutUs-page/aboutUs.html
@@ -1,11 +1,40 @@
 <ion-header>
     <ion-navbar>
         <ion-title>
-            About Us
+            {{title}}
         </ion-title>
     </ion-navbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content>
+    <ion-thumbnail>
+        <img width="100" height="100" src="http://www.stickpng.com/assets/thumbs/580b585b2edbce24c47b2d2d.png">
+    </ion-thumbnail>
 
+
+    <ion-label>
+        Star Wars Association
+    </ion-label>
+
+    <ion-label>
+            Creation date : 01/01/2017
+    </ion-label>
+    <ion-label no-lines>
+        Address : ............
+    </ion-label>
+    <ion-label>
+        Main activities : ............
+    </ion-label>
+    <ion-label>
+        Total members : ............
+    </ion-label>
+
+    <ion-card-header>
+        Organization's story :
+    </ion-card-header>
+
+    <ion-card-content>
+        Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié. Il a été popularisé dans les années 1960 grâce à la vente de feuilles Letraset contenant des passages du Lorem Ipsum, et, plus récemment, par son inclusion dans des applications de mise en page de texte, comme Aldus PageMaker.
+    </ion-card-content>
+    <button ion-button (click)="pushContactUs()">Contact Us !</button>
 </ion-content>
