add spinner when iframe loads

--- a/src/pages/community-tab/aboutUs-page/aboutUs.html
+++ b/src/pages/community-tab/aboutUs-page/aboutUs.html
@@ -7,12 +7,11 @@
 </ion-header>
 
 <ion-content>
-    <ion-thumbnail>
+    <ion-thumbnail id="imgAsso">
         <img width="100" height="100" src="http://www.stickpng.com/assets/thumbs/580b585b2edbce24c47b2d2d.png">
     </ion-thumbnail>
 
-
-    <ion-label>
+    <ion-label id="headerAbout">
         Star Wars Association
     </ion-label>
 
