ajout des pages

--- a/src/pages/community-tab/communityIndex-page/communityIndex.html
+++ b/src/pages/community-tab/communityIndex-page/communityIndex.html
@@ -10,6 +10,8 @@
 
     <button ion-button (click)="pushChat()">Chat</button>
 
+    <button ion-button (click)="pushEvent()">Events</button>
+
 
 
 
