--- a/src/pages/community-tab/contactUs-page/contactUs.html
+++ b/src/pages/community-tab/contactUs-page/contactUs.html
@@ -7,6 +7,8 @@
 </ion-header>
 
 <ion-content>
-    <ion-spinner id="spinnerGform" name="bubbles"></ion-spinner>
+    <div *ngIf="spinnerLoading" class="spinner-container">
+        <ion-spinner name="bubbles"></ion-spinner>
+    </div>
     <iframe (load)="onLoad()" class="gForm" src="https://docs.google.com/forms/d/e/1FAIpQLSf3qw3d9449YNi-xcaw-bpB2LYWI2zblEEPpeGBefPYW2sCHg/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Chargement en cours...</iframe>
 </ion-content>
