add dark footer + AboutUs>navbar

--- a/src/pages/community-tab/communityIndex-page/communityIndex.html
+++ b/src/pages/community-tab/communityIndex-page/communityIndex.html
@@ -6,11 +6,11 @@
     </ion-navbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content padding class="background">
 
-    <button ion-button (click)="pushEvents()">Events</button>
-    <button ion-button (click)="pushChat()">Chat</button>
-    <button ion-button (click)="pushAboutUs()">About Us</button>
+    <button ion-button outline round (click)="pushEvents()">Events</button>
+    <button ion-button color="danger" outline round (click)="pushChat()">Chat</button>
+    <button ion-button color="secondary" outline round (click)="pushAboutUs()">About Us</button>
 
 
 
