--- a/src/pages/community-tab/communityIndex-page/communityIndex.html
+++ b/src/pages/community-tab/communityIndex-page/communityIndex.html
@@ -1,5 +1,5 @@
 <ion-header>
-    <ion-navbar>
+    <ion-navbar color="dark">
         <ion-title>
             Community
         </ion-title>
@@ -11,8 +11,5 @@
     <button ion-button outline round (click)="pushEvents()">Events</button>
     <button ion-button color="danger" outline round (click)="pushChat()">Chat</button>
     <button ion-button color="secondary" outline round (click)="pushAboutUs()">About Us</button>
-
-
-
 
 </ion-content>
