--- a/src/pages/starwars-tab/starWarsObject-page/starWarsObject.html
+++ b/src/pages/starwars-tab/starWarsObject-page/starWarsObject.html
@@ -28,15 +28,22 @@
 </ion-list>-->
 
 
-<ion-card *ngFor="let item of starWarsObjectsList | FilterPipe: searchInput" (click)="pushObjectDetail(item, item.name || item.title)">
-  <img src="http://www.uniqlo.com/sg/corp/pressrelease/STARWARS.PNG"/>
-  <ion-card-content>
-    <ion-card-title class="title-center">
-      {{item.name || item.title}}
-      </ion-card-title>
+     <ion-list>
+       <ion-card *ngFor="let item of starWarsObjectsList " (click)="pushObjectDetail(item, item.name || item.title)">
+         <img src="http://www.uniqlo.com/sg/corp/pressrelease/STARWARS.PNG"/>
+         <ion-card-content>
+           <ion-card-title class="title-center">
+             {{item.name || item.title}}
+             </ion-card-title>
 
-  </ion-card-content>
-</ion-card>
+         </ion-card-content>
+       </ion-card>
+</ion-list>
+
+<ion-infinite-scroll (ionInfinite)="retrieveMoreFromAPI($event)">
+   <ion-infinite-scroll-content>
+   </ion-infinite-scroll-content>
+ </ion-infinite-scroll>
 <!-- <div *ngFor="let item of starWarsObjectsList | FilterPipe: searchInput ">
         <ion-card>
           <img src="http://www.slate.fr/sites/default/files/styles/1090x500/public/starwars.png"/>
