Gform + background changed, community btn fixed

--- a/src/pages/community-tab/communityIndex-page/communityIndex.html
+++ b/src/pages/community-tab/communityIndex-page/communityIndex.html
@@ -7,9 +7,9 @@
 </ion-header>
 
 <ion-content padding class="background">
-
-    <button ion-button outline round (click)="pushEvent()">Events</button>
-    <button ion-button color="danger" outline round (click)="pushChat()">Chat</button>
-    <button ion-button color="secondary" outline round (click)="pushAboutUs()">About Us</button>
+    
+    <button ion-button class="buttonCommunity" outline round (click)="pushEvent()">Events</button>
+    <button ion-button class="buttonCommunity" color="danger" outline round (click)="pushChat()">Chat</button>
+    <button ion-button class="buttonCommunity" color="secondary" outline round (click)="pushAboutUs()">About Us</button>
 
 </ion-content>
