--- a/src/pages/community-tab/aboutUs-page/aboutUs.html
+++ b/src/pages/community-tab/aboutUs-page/aboutUs.html
@@ -1,6 +1,6 @@
 <ion-header>
-    <ion-navbar color="dark">
-        <ion-title>
+    <ion-navbar>
+        <ion-title id="navAboutUs">
             {{title}}
         </ion-title>
     </ion-navbar>
