--- a/src/pages/starwars-tab/starWarsObjectDetail-page/starWarsObjectDetail.html
+++ b/src/pages/starwars-tab/starWarsObjectDetail-page/starWarsObjectDetail.html
@@ -174,7 +174,7 @@
 
 
 <ng-template [ngIf]= "selectedItem_PeopleList.length > 0" >
-<h1 class="title-center">Pilots</h1>
+<h1 class="title-center">People</h1>
 <ion-scroll scrollX="true" class="scroll" >
 <ion-row nowrap >
   <div *ngFor="let people of selectedItem_PeopleList">
