--- a/src/pages/starwars-tab/starWarsIndex-page/starWarsIndex.html
+++ b/src/pages/starwars-tab/starWarsIndex-page/starWarsIndex.html
@@ -6,14 +6,39 @@
     </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-    <button ion-button (click)="pushPlanets()">Planets</button>
-    <button ion-button (click)="pushSpecies()">Species</button>
-    <button ion-button (click)="pushPeoples()">Peoples</button>
-    <button ion-button (click)="pushStarShips()">SpaceShips</button>
-    <button ion-button (click)="pushFilms()">Films</button>
-    <button ion-button (click)="pushVehicles()">Vehicles</button>
+<ion-content padding class="background">
+    <button ion-button button-royal class="buttonStarwars"  outline round (click)="pushPlanets()">
+      <img class="imgStarwars" src='../../../assets/imgs/planet.png'/>
+        <img class="imgStarwars" src='../../../assets/imgs/planet2.png'/>
+          <img class="imgStarwars" src='../../../assets/imgs/planet3.png'/>
+      <h3>Planets</h3>
+    </button>
+    <ion-row>
+    <button ion-button button-royal class="buttonStarwars" outline round  (click)="pushSpecies()">
+      <img class="imgStarwars" src='../../../assets/imgs/species.png'/>
+      <h3>Species</h3>
+    </button>
+    <button ion-button button-royal class="buttonStarwars" outline round (click)="pushPeoples()">
+      <img class="imgStarwars" src='../../../assets/imgs/people.png'/>
+      <h3>People</h3>
+    </button>
+  </ion-row>
+    <button ion-button button-royal class="buttonStarwars" outline round (click)="pushStarShips()">
+      <img class="imgStarwars" src='../../../assets/imgs/starship.png'/>
+      <img class="imgStarwars" src='../../../assets/imgs/starship3.png'/>
+      <img class="imgStarwars" src='../../../assets/imgs/starship4.png'/>
 
+      <h3>Starships</h3>
+    </button>
+    <button ion-button button-royal class="buttonStarwars" outline round (click)="pushFilms()">
+      <img class="imgStarwars" src='../../../assets/imgs/films.png'/>
+      <h3>Films</h3>
+    </button>
+    <button ion-button button-royal class="buttonStarwars" outline round (click)="pushVehicles()">
+      <img class="imgStarwars" src='../../../assets/imgs/vehicle.png'/>
+      <h3>Vehicles</h3>
+
+    </button>
 
 
 
