--- a/src/pages/starwars-tab/starWarsIndex-page/starWarsIndex.html
+++ b/src/pages/starwars-tab/starWarsIndex-page/starWarsIndex.html
@@ -8,35 +8,35 @@
 
 <ion-content padding class="background">
     <button ion-button button-royal class="buttonStarwars"  outline round (click)="pushPlanets()">
-      <img class="imgStarwars" src='../../../assets/imgs/planet.png'/>
-        <img class="imgStarwars" src='../../../assets/imgs/planet2.png'/>
-          <img class="imgStarwars" src='../../../assets/imgs/planet3.png'/>
-      <h4>Planets</h4>
+      <img class="imgStarwars" src='assets/imgs/planet.png'/>
+        <img class="imgStarwars" src='assets/imgs/planet2.png'/>
+          <img class="imgStarwars" src='assets/imgs/planet3.png'/>
+      <span class="swHomeTitle">Planets</span>
     </button>
     <ion-row>
     <button ion-button button-royal class="buttonStarwars" outline round  (click)="pushSpecies()">
-      <img class="imgStarwars" src='../../../assets/imgs/species.png'/>
-      <h4>Species</h4>
+      <img class="imgStarwars" src='assets/imgs/species.png'/>
+      <span class="swHomeTitle">Species</span>
     </button>
     <button ion-button button-royal class="buttonStarwars" outline round (click)="pushPeoples()">
-      <img class="imgStarwars" src='../../../assets/imgs/people.png'/>
-      <h4>People</h4>
+      <img class="imgStarwars" src='assets/imgs/people.png'/>
+      <span class="swHomeTitle">People</span>
     </button>
   </ion-row>
     <button ion-button button-royal class="buttonStarwars" outline round (click)="pushStarShips()">
-      <img class="imgStarwars" src='../../../assets/imgs/starship.png'/>
-      <img class="imgStarwars" src='../../../assets/imgs/starship3.png'/>
-      <img class="imgStarwars" src='../../../assets/imgs/starship4.png'/>
+      <img class="imgStarwars" src='assets/imgs/starship.png'/>
+      <img class="imgStarwars" src='assets/imgs/starship3.png'/>
+      <img class="imgStarwars" src='assets/imgs/starship4.png'/>
 
-      <h4>Starships</h4>
+      <span class="swHomeTitle">Starships</span>
     </button>
     <button ion-button button-royal class="buttonStarwars" outline round (click)="pushFilms()">
-      <img class="imgStarwars" src='../../../assets/imgs/films.png'/>
-      <h4>Films</h4>
+      <img class="imgStarwars" src='assets/imgs/films.png'/>
+      <span class="swHomeTitle">Films</span>
     </button>
     <button ion-button button-royal class="buttonStarwars" outline round (click)="pushVehicles()">
-      <img class="imgStarwars" src='../../../assets/imgs/vehicle.png'/>
-      <h4>Vehicles</h4>
+      <img class="imgStarwars" src='assets/imgs/vehicle.png'/>
+      <span class="swHomeTitle">Vehicles</span>
 
     </button>
 
