--- a/src/pages/community-tab/chat-page/chat.html
+++ b/src/pages/community-tab/chat-page/chat.html
@@ -6,6 +6,40 @@
     </ion-navbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content>
+    <ion-grid>
+        <ion-row *ngFor="let message of messages">
+
+            <ion-col col-9 *ngIf="message.username !== username" class="message" [ngClass]="{'my_message': message.username === username, 'other_message': message.username !== username}">
+                <span class="user_name">{{ message.mail }}:</span><br>
+                <span>{{ message.message }}</span>
+                <div class="time">{{message.date | date:'dd.MM hh:MM'}}</div>
+            </ion-col>
+
+            <ion-col offset-3 col-9 *ngIf="message.username === username" class="message" [ngClass]="{'my_message': message.username === username, 'other_message': message.username !== username}">
+                <span class="user_name">{{ message.username }}:</span><br>
+                <span>{{ message.message }}</span>
+                <div class="time">{{message.created | date:'dd.MM hh:MM'}}</div>
+            </ion-col>
+
+        </ion-row>
+    </ion-grid>
 
 </ion-content>
+
+<ion-footer>
+    <ion-toolbar>
+        <ion-row class="message_row">
+            <ion-col col-9>
+                <ion-item no-lines>
+                    <ion-input type="text" placeholder="Message" [(ngModel)]="message"></ion-input>
+                </ion-item>
+            </ion-col>
+            <ion-col col-3>
+                <button ion-button clear color="primary" (click)="sendMessage()" [disabled]="message === ''">
+        Send
+      </button>
+            </ion-col>
+        </ion-row>
+    </ion-toolbar>
+</ion-footer>
