--- a/src/pages/starwars-tab/starWarsObjectDetail-page/starWarsObjectDetail.html
+++ b/src/pages/starwars-tab/starWarsObjectDetail-page/starWarsObjectDetail.html
@@ -163,8 +163,8 @@
   <h1 class="title-center">Films</h1>
 <ion-scroll scrollX="true" class="scroll">
   <ion-row nowrap >
-  <div *ngFor="let film of selectedItem_FilmsList" class="detailCard">
-       <p>{{film.title}}</p>
+  <div *ngFor="let item of selectedItem_FilmsList" class="detailCard" (click)="goToAssociatedObjectDetail(item, item.name || item.title)">
+       <p>{{item.title}}</p>
     </div>
     </ion-row>
 </ion-scroll>
@@ -174,8 +174,8 @@
 <h1 class="title-center">People</h1>
 <ion-scroll scrollX="true" class="scroll" >
 <ion-row nowrap >
-  <div *ngFor="let people of selectedItem_PeopleList" class="detailCard">
-      <p>{{people.name}}</p>
+  <div *ngFor="let item of selectedItem_PeopleList" class="detailCard" (click)="goToAssociatedObjectDetail(item, item.name || item.title)">
+      <p>{{item.name}}</p>
   </div>
 </ion-row>
 </ion-scroll>
@@ -185,8 +185,8 @@
 <h1 class="title-center">Starships</h1>
 <ion-scroll scrollX="true" class="scroll" >
 <ion-row nowrap >
-  <div *ngFor="let ss of selectedItem_StarshipsList" class="detailCard">
-      <p>{{ss.name}}</p>
+  <div *ngFor="let item of selectedItem_StarshipsList" class="detailCard" (click)="goToAssociatedObjectDetail(item, item.name || item.title)">
+      <p>{{item.name}}</p>
   </div>
 </ion-row>
 </ion-scroll>
@@ -196,8 +196,8 @@
 <h1 class="title-center">Species</h1>
 <ion-scroll scrollX="true" class="scroll" >
 <ion-row nowrap >
-  <div *ngFor="let s of selectedItem_SpeciesList" class="detailCard">
-      <p>{{s.name}}</p>
+  <div *ngFor="let item of selectedItem_SpeciesList" class="detailCard" (click)="goToAssociatedObjectDetail(item, item.name || item.title)">
+      <p>{{item.name}}</p>
   </div>
 </ion-row>
 </ion-scroll>
@@ -207,8 +207,8 @@
 <h1 class="title-center">Planets</h1>
 <ion-scroll scrollX="true" class="scroll" >
 <ion-row nowrap >
-  <div *ngFor="let planet of selectedItem_PlanetsList" class="detailCard">
-      <p>{{planet.name}}</p>
+  <div *ngFor="let item of selectedItem_PlanetsList" class="detailCard" (click)="goToAssociatedObjectDetail(item, item.name || item.title)">
+      <p>{{item.name}}</p>
   </div>
 </ion-row>
 </ion-scroll>
@@ -218,8 +218,8 @@
 <h1 class="title-center">Vehicles</h1>
 <ion-scroll scrollX="true" class="scroll" >
 <ion-row nowrap >
-  <div *ngFor="let v of selectedItem_VehiclesList" class="detailCard">
-      <p>{{v.name}}</p>
+  <div *ngFor="let item of selectedItem_VehiclesList" class="detailCard" (click)="goToAssociatedObjectDetail(item, item.name || item.title)">
+      <p>{{item.name}}</p>
   </div>
 </ion-row>
 </ion-scroll>
