--- a/src/pages/starwars-tab/starWarsObject-page/starWarsObject.html
+++ b/src/pages/starwars-tab/starWarsObject-page/starWarsObject.html
@@ -35,15 +35,11 @@
 </ion-list>-->
 
 
-     <ion-list>
-       <ion-item no-lines *ngFor="let item of objectsList " class="item" (click)="pushObjectDetail(item, item.name || item.title)" >
-
-
-  <ion-thumbnail item-start>
-    <img src="http://www.uniqlo.com/sg/corp/pressrelease/STARWARS.PNG">
-  </ion-thumbnail>
-  <p> {{item.name || item.title}}</p>
-</ion-item>
+     <ion-list class="swList"  style="swObjectsList">
+       <ion-item no-lines *ngFor="let item of objectsList " class="itemList" (click)="pushObjectDetail(item, item.name || item.title)" >
+     <img item-start class="imgList " src="assets/imgs/swlogo.png">
+     <p> {{item.name || item.title}}</p>
+   </ion-item>
 
 
 </ion-list>
