--- a/src/pages/starwars-tab/starWarsObjectDetail-page/starWarsObjectDetail.html
+++ b/src/pages/starwars-tab/starWarsObjectDetail-page/starWarsObjectDetail.html
@@ -21,12 +21,10 @@
   <strong>Crew:</strong><p>{{selectedItem.crew}}</p>
 </ng-template>
 -->
-<ion-item>
-  <ion-thumbnail item-start>
-    <img src="http://www.freepngimg.com/thumb/star_wars/1-2-lego-star-wars-png-thumb.png">
-  </ion-thumbnail>
+<div class="blockInfo">
+    <img class="imgDetail" src="assets/imgs/detail.png">
 
-  <ng-template [ngIf]= "objectType == 'vehicle'" >
+  <ng-template [ngIf]= "objectType == 'vehicle'"  >
     <div class="block">
       <strong class="inline">Cargo Capacity: </strong> <p class="inline">{{selectedItem.cargo_capacity}}</p>
     </div>
@@ -157,13 +155,13 @@
     </div>
 
   </ng-template>
-</ion-item>
+</div>
 
 <ng-template [ngIf]= "selectedItem_FilmsList.length > 0" >
-  <h1 class="title-center">Films</h1>
+  <h1 class="titleList">Films</h1>
 <ion-scroll scrollX="true" class="scroll">
   <ion-row nowrap >
-  <div *ngFor="let item of selectedItem_FilmsList" class="detailCard" (click)="goToAssociatedObjectDetail(item, item.name || item.title)">
+  <div class="itemDetailList" *ngFor="let item of selectedItem_FilmsList" class="detailCard" (click)="goToAssociatedObjectDetail(item, item.name || item.title)">
        <p>{{item.title}}</p>
     </div>
     </ion-row>
