--- a/src/pages/community-tab/communityIndex-page/communityIndex.html
+++ b/src/pages/community-tab/communityIndex-page/communityIndex.html
@@ -9,15 +9,15 @@
 <ion-content padding class="background">
     
     <button ion-button color="secondary" class="buttonStarwars"  outline round (click)="pushEvent()">
-        <img class="imgStarwars" src="assets/imgs//agenda.png"/>              
-        <span class="swHomeTitle">Events</span>
+        <img class="imgStarwars" src="assets/imgs/agenda.png"/>              
+        <span>Events</span>
     </button>
     <button ion-button color="danger" class="buttonStarwars"  outline round (click)="pushChat()">
-        <img class="imgStarwars" src="assets/imgs//chat.png"/>
-        <span >Chat</span>
+        <img class="imgStarwars" src="assets/imgs/chat.png"/>
+        <span>Chat</span>
     </button>
     <button ion-button class="buttonStarwars" outline round (click)="pushAboutUs()">
-        <img class="imgStarwars" src="assets/imgs//about-us.png"/>              
+        <img class="imgStarwars" src="assets/imgs/about-us.png"/>              
         <span>About Us !</span>
     </button>
 </ion-content>
