update text about us

--- a/src/pages/community-tab/communityIndex-page/communityIndex.html
+++ b/src/pages/community-tab/communityIndex-page/communityIndex.html
@@ -8,15 +8,15 @@
 
 <ion-content padding class="background">
     
-    <button ion-button color="secondary" class="buttonStarwars"  outline round (click)="pushEvent()">
+    <button ion-button color="secondary" class="buttonCommunity"  outline round (click)="pushEvent()">
         <img class="imgStarwars" src="assets/imgs/agenda.png"/>              
         <span>Events</span>
     </button>
-    <button ion-button color="danger" class="buttonStarwars"  outline round (click)="pushChat()">
+    <button ion-button color="danger" class="buttonCommunity"  outline round (click)="pushChat()">
         <img class="imgStarwars" src="assets/imgs/chat.png"/>
         <span>Chat</span>
     </button>
-    <button ion-button class="buttonStarwars" outline round (click)="pushAboutUs()">
+    <button ion-button class="buttonCommunity" outline round (click)="pushAboutUs()">
         <img class="imgStarwars" src="assets/imgs/about-us.png"/>              
         <span>About Us !</span>
     </button>
