add version in About Us

--- a/src/pages/community-tab/aboutUs-page/aboutUs.html
+++ b/src/pages/community-tab/aboutUs-page/aboutUs.html
@@ -30,7 +30,9 @@
         </ion-card-content>
     </div>
     
-    <div id="buttonAboutUs">        
+    <div id="buttonAboutUs">
         <button ion-button outline round (click)="pushContactUs()">Contact Us !</button>
+        
     </div>
+    <label id="label-version">{{ version }}</label>
 </ion-content>
