--- a/src/pages/starwars-tab/starWarsObjectDetail-page/starWarsObjectDetail.html
+++ b/src/pages/starwars-tab/starWarsObjectDetail-page/starWarsObjectDetail.html
@@ -47,7 +47,7 @@
       <strong class="inline">Manufacturer: </strong> <p class="inline">{{selectedItem.manufacturer}}</p>
     </div>
     <div class="block">
-      <strong class="inline">Cost In_Credits: </strong> <p class="inline">{{selectedItem.cost_in_credits}}</p>
+      <strong class="inline">Cost In Credits: </strong> <p class="inline">{{selectedItem.cost_in_credits}}</p>
     </div>
 
   </ng-template>
@@ -60,7 +60,7 @@
       <strong class="inline">Manufacturer: </strong> <p class="inline">{{selectedItem.manufacturer}}</p>
     </div>
     <div class="block">
-      <strong class="inline">Cost In_Credits: </strong> <p class="inline">{{selectedItem.cost_in_credits}}</p>
+      <strong class="inline">Cost In Credits: </strong> <p class="inline">{{selectedItem.cost_in_credits}}</p>
     </div>
   </ng-template>
 
@@ -118,10 +118,10 @@
       <strong class="inline">Gender: </strong> <p class="inline">{{selectedItem.gender}}</p>
     </div>
     <div class="block">
-      <strong class="inline">Birth_year: </strong> <p class="inline">{{selectedItem.birth_year}}</p>
+      <strong class="inline">Birth Year: </strong> <p class="inline">{{selectedItem.birth_year}}</p>
     </div>
     <div class="block">
-      <strong class="inline">Eye_color: </strong> <p class="inline">{{selectedItem.eye_color}}</p>
+      <strong class="inline">Eye Color: </strong> <p class="inline">{{selectedItem.eye_color}}</p>
     </div>
     <div class="block">
       <strong class="inline">Hair Colors: </strong> <p class="inline">{{selectedItem.hair_color}}</p>
@@ -142,16 +142,16 @@
 
   <ng-template [ngIf]= "objectType == 'film'" >
     <div class="block">
-      <strong class="inline">director: </strong> <p class="inline">{{selectedItem.director}}</p>
+      <strong class="inline">Director: </strong> <p class="inline">{{selectedItem.director}}</p>
     </div>
     <div class="block">
-      <strong class="inline">producer: </strong> <p class="inline">{{selectedItem.producer}}</p>
+      <strong class="inline">Producer: </strong> <p class="inline">{{selectedItem.producer}}</p>
     </div>
     <div class="block">
-      <strong class="inline">release_date: </strong> <p class="inline">{{selectedItem.release_date}}</p>
+      <strong class="inline">Release Date: </strong> <p class="inline">{{selectedItem.release_date}}</p>
     </div>
     <div class="block">
-      <strong class="inline">opening_crawl: </strong> <p class="inline">{{selectedItem.opening_crawl}}</p>
+      <strong class="inline">Opening Crawl: </strong> <p>{{selectedItem.opening_crawl}}</p>
     </div>
 
   </ng-template>
