changement du design community

--- a/src/pages/community-tab/communityIndex-page/communityIndex.html
+++ b/src/pages/community-tab/communityIndex-page/communityIndex.html
@@ -7,17 +7,17 @@
 </ion-header>
 
 <ion-content padding class="background">
-    
-    <button ion-button color="secondary" class="buttonStarwars"  outline round (click)="pushEvent()">
-        <img class="imgStarwars" src="assets/imgs/agenda.png"/>              
+
+    <button ion-button color="secondary" class=" littleButton"  outline round (click)="pushEvent()">
+        <img class="imgComm" src="assets/imgs/agenda.png"/>
         <span>Events</span>
     </button>
-    <button ion-button color="danger" class="buttonStarwars"  outline round (click)="pushChat()">
-        <img class="imgStarwars" src="assets/imgs/chat.png"/>
+    <button ion-button color="danger" class=" littleButton"  outline round (click)="pushChat()">
+        <img class="imgComm" src="assets/imgs/chat.png"/>
         <span>Chat</span>
     </button>
-    <button ion-button class="buttonStarwars" outline round (click)="pushAboutUs()">
-        <img class="imgStarwars" src="assets/imgs/about-us.png"/>              
+    <button ion-button class=" bigButton" outline round (click)="pushAboutUs()">
+        <img class="imgComm" src="assets/imgs/about-us.png"/>
         <span>About Us !</span>
     </button>
 </ion-content>
