get version number from ionic

--- a/src/pages/community-tab/aboutUs-page/aboutUs.html
+++ b/src/pages/community-tab/aboutUs-page/aboutUs.html
@@ -34,5 +34,5 @@
         <button ion-button outline round (click)="pushContactUs()">Contact Us !</button>
         
     </div>
-    <label id="label-version">{{ version }}</label>
+    <label id="label-version">V {{ version }}</label>
 </ion-content>
