ajout de l'image start

--- a/src/pages/starwars-tab/starWarsIndex-page/starWarsIndex.html
+++ b/src/pages/starwars-tab/starWarsIndex-page/starWarsIndex.html
@@ -7,6 +7,7 @@
 </ion-header>
 
 <ion-content padding class="background">
+    <img class="startImg" src='assets/imgs/start.png'/>
     <button ion-button button-royal class="buttonStarwars big margintop"  outline round (click)="pushPlanets()">
       <img class="imgStarwars" src='assets/imgs/planet.png'/>
         <img class="imgStarwars" src='assets/imgs/planet2.png'/>
